--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <p>User:</p>
       <input id="user" style="margin-bottom: 1px" /> <br />
       <p>Password:</p>
-      <input id="pass" /><br />
+      <input id="pass" type="password" /><br />
       <button onClick="buttonPress()" style="margin-top: 15px">Login</button>
     </center>
     <script>
@@ -52,3 +52,4 @@
     </script>
   </body>
 </html>
+
