--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
 
     h1 {
       color: white;
+      text-align: center;
     }
 
     h2 {
       color: white;
+      text-align: center;
     }
 
     p {
       color: white;
+      text-align: center;
     }
 
     #scplogo {
@@ -30,7 +33,6 @@
     <title>Site Blackstone Medical Login Page</title>
   </head>
   <body>
-    <center>
       <img id="scplogo" src="scplogo.png" alt="SCP logo" />
       <h1>Site Blackstone Medical Login Page</h1>
       <p>User:</p>
@@ -38,7 +40,6 @@
       <p>Password:</p>
       <input id="pass" type="password" /><br />
       <button onClick="buttonPress()" style="margin-top: 15px">Login</button>
-    </center>
     <script>
       function buttonPress() {
         if (
@@ -52,4 +53,5 @@
     </script>
   </body>
 </html>
+
 
