--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     h1 {
       color: white;
+      text-align: center;
     }
 
     h2 {
@@ -52,6 +53,7 @@
     </script>
   </body>
 </html>
+
 
 
 
