--- a/index.html
+++ b/index.html
@@ -7,17 +7,14 @@
 
     h1 {
       color: white;
-      text-align: center;
     }
 
     h2 {
       color: white;
-      text-align: center;
     }
 
     p {
       color: white;
-      text-align: center;
     }
 
     #scplogo {
@@ -33,13 +30,15 @@
     <title>Site Blackstone Medical Login Page</title>
   </head>
   <body>
-      <img id="scplogo" src="scplogo.png" alt="SCP logo" />
-      <h1>Site Blackstone Medical Login Page</h1>
-      <p>User:</p>
-      <input id="user" style="margin-bottom: 1px" /> <br />
-      <p>Password:</p>
-      <input id="pass" type="password" /><br />
-      <button onClick="buttonPress()" style="margin-top: 15px">Login</button>
+    <center>
+        <img id="scplogo" src="scplogo.png" alt="SCP logo" />
+        <h1>Site Blackstone Medical Login Page</h1>
+        <p>User:</p>
+        <input id="user" style="margin-bottom: 1px" /> <br />
+        <p>Password:</p>
+        <input id="pass" type="password" /><br />
+        <button onClick="buttonPress()" style="margin-top: 15px">Login</button>
+      </center>
     <script>
       function buttonPress() {
         if (
@@ -53,6 +52,7 @@
     </script>
   </body>
 </html>
+
 
 
 
