--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Site Blackstone Medical Login Page</title>
+    <link rel="icon" type="image/x-icon href="scplogo.png">
   </head>
   <body>
     <center>
@@ -91,3 +92,4 @@
     </script>
   </body>
 </html>
+
