--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Site Blackstone Medical Login Page</title>
+    <link rel="icon" type="image/jpg" href="favicon.jpg" />
     <link rel="shortcut icon" type="image/jpg" href="favicon.jpg" />
+    
   </head>
   <body>
     <center>
@@ -92,3 +94,4 @@
     </script>
   </body>
 </html>
+
