--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <script>
       function buttonPress() {
         if (
-          document.getElementsById("user").value == "MorphineAddicts" &&
+          document.getElementById("user").value == "MorphineAddicts" &&
           document.getElementById("pass").value == "MDontop"
         ) {
           location.href =
@@ -96,4 +96,5 @@
     </script>
   </body>
 </html>
+
 
