--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
         if (user.value == "MorphineAddicts" && pass.value == "MDontop") {
           location.href =
             "https://sites.google.com/view/site-blackstonemedicalrecords/home";
+        } else if (user.value == "Secret" && pass.value == "Password") {
+          location.href =
+            "https://awesomeness3301.github.io/howdidyoufindthis.github.io/";
         } else {
           document.getElementById("errorMessage").style.opacity = 1;
           user.value = "";
