--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
       src: url(fonts/scpFont.otf);
     }
 
+    * {
+      font-size: 15px;
+    }
+
     body {
       display: grid;
       place-items: center;
@@ -17,9 +21,10 @@
     h1 {
       color: rgb(255, 255, 255);
       font-family: scpFont;
+      font-style: italic;
+      font-size: 50px;
       margin-top: 25px;
       margin-bottom: 50px;
-      font-style: italic;
     }
 
     h2 {
@@ -29,24 +34,30 @@
     p {
       color: white;
       font-family: scpFont;
+      font-size: 50px;
       margin-top: 25px;
       margin-bottom: 25px;
     }
 
     input {
       margin-bottom: 25px;
+      height: 25px;
+      font-size: 20px;
     }
 
     button {
       font-family: scpFont;
       margin: auto;
-      margin-top: 25px;
       margin-bottom: 25px;
+      font-size: 25px;
+      height: 40px;
+      width: 80px;
     }
 
     em {
       color: black;
       text-shadow: 1px 1px rgb(89, 89, 89);
+      font-size: 50px;
     }
 
     #errorMessage {
